@@ -3,15 +3,18 @@ package team.creative.cmdcam.client;
 import java.util.ArrayList;
 import java.util.Iterator;
 
-import org.lwjgl.opengl.GL11;
-
-import com.mojang.blaze3d.platform.GlStateManager;
+import com.mojang.blaze3d.matrix.MatrixStack;
+import com.mojang.blaze3d.systems.RenderSystem;
 
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.renderer.ActiveRenderInfo;
-import net.minecraft.client.renderer.GameRenderer;
+import net.minecraft.client.renderer.BufferBuilder;
+import net.minecraft.client.renderer.Tessellator;
+import net.minecraft.client.renderer.debug.DebugRenderer;
 import net.minecraft.client.renderer.tileentity.TileEntityRendererDispatcher;
+import net.minecraft.client.renderer.vertex.DefaultVertexFormats;
 import net.minecraft.entity.Entity;
+import net.minecraft.util.math.Vec3d;
 import net.minecraft.util.text.StringTextComponent;
 import net.minecraftforge.client.event.EntityViewRenderEvent.CameraSetup;
 import net.minecraftforge.client.event.RenderWorldLastEvent;
@@ -23,9 +26,9 @@ import net.minecraftforge.eventbus.api.SubscribeEvent;
 import team.creative.cmdcam.client.interpolation.CamInterpolation;
 import team.creative.cmdcam.client.mode.CamMode;
 import team.creative.cmdcam.client.mode.OutsideMode;
-import team.creative.cmdcam.common.utils.CamPoint;
-import team.creative.cmdcam.common.utils.CamTarget;
-import team.creative.cmdcam.common.utils.vec.Vec3;
+import team.creative.cmdcam.common.util.CamPoint;
+import team.creative.cmdcam.common.util.CamTarget;
+import team.creative.creativecore.common.util.math.vec.Vector3;
 
 public class CamEventHandlerClient {
 	
@@ -46,14 +49,14 @@ public class CamEventHandlerClient {
 			if (!mc.isGamePaused()) {
 				if (CMDCamClient.getCurrentPath() == null) {
 					if (KeyHandler.zoomIn.isKeyDown()) {
-						if (mc.player.isSneaking())
+						if (mc.player.isCrouching())
 							mc.gameSettings.fov -= amountZoom * 10;
 						else
 							mc.gameSettings.fov -= amountZoom;
 					}
 					
 					if (KeyHandler.zoomOut.isKeyDown()) {
-						if (mc.player.isSneaking())
+						if (mc.player.isCrouching())
 							mc.gameSettings.fov += amountZoom * 10;
 						else
 							mc.gameSettings.fov += amountZoom;
@@ -107,109 +110,49 @@ public class CamEventHandlerClient {
 			}
 		}
 		if (CMDCamClient.getCurrentPath() == null && shouldRender && CMDCamClient.points.size() > 0) {
-			GlStateManager.enableBlend();
-			GlStateManager.blendFuncSeparate(770, 771, 1, 0);
-			GlStateManager.disableTexture();
-			GL11.glDepthMask(false);
+			RenderSystem.enableBlend();
+			RenderSystem.blendFuncSeparate(770, 771, 1, 0);
+			RenderSystem.disableTexture();
+			RenderSystem.depthMask(false);
+			RenderSystem.enableDepthTest();
 			
-			Vec3[] points = new Vec3[CMDCamClient.points.size()];
-			for (int i = 0; i < points.length; i++) {
-				points[i] = new Vec3(CMDCamClient.points.get(i).x, CMDCamClient.points.get(i).y, CMDCamClient.points.get(i).z);
-				GlStateManager.pushMatrix();
-				GlStateManager.translated(-TileEntityRendererDispatcher.staticPlayerX, -TileEntityRendererDispatcher.staticPlayerY + mc.player.getEyeHeight() - 0.1, -TileEntityRendererDispatcher.staticPlayerZ);
-				renderBlock(points[i].x, points[i].y, points[i].z, 0.1, 0.1, 0.1, 0, 0, 0, 1, 1, 1, 1);
-				ActiveRenderInfo activerenderinfo = TileEntityRendererDispatcher.instance.renderInfo;
-				float f = activerenderinfo.getYaw();
-				float f1 = activerenderinfo.getPitch();
-				GameRenderer.drawNameplate(mc.fontRenderer, (i + 1) + "", (float) points[i].x, (float) points[i].y + 0.4F, (float) points[i].z, 0, f, f1, false);
-				GL11.glDepthMask(false);
-				GlStateManager.disableLighting();
-				GlStateManager.disableTexture();
-				GlStateManager.popMatrix();
+			ActiveRenderInfo activerenderinfo = TileEntityRendererDispatcher.instance.renderInfo;
+			Vec3d view = activerenderinfo.getProjectedView();
+			
+			for (int i = 0; i < CMDCamClient.points.size(); i++) {
+				CamPoint point = CMDCamClient.points.get(i);
+				
+				RenderSystem.pushMatrix();
+				MatrixStack mat = event.getMatrixStack();
+				mat.push();
+				mat.translate(-view.x, -view.y, -view.z);
+				
+				RenderSystem.multMatrix(mat.getLast().getMatrix());
+				DebugRenderer.renderText((i + 1) + "", point.x + view.x, point.y + 0.2 + view.y, point.z + view.z, -1);
+				DebugRenderer.renderBox(point.x - 0.05, point.y - 0.05, point.z - 0.05, point.x + 0.05, point.y + 0.05, point.z + 0.05, 1, 1, 1, 1);
+				
+				RenderSystem.depthMask(false);
+				RenderSystem.disableLighting();
+				RenderSystem.disableTexture();
+				mat.pop();
+				RenderSystem.popMatrix();
 			}
 			
 			for (Iterator<CamInterpolation> iterator = CamInterpolation.interpolationTypes.values().iterator(); iterator.hasNext();) {
 				CamInterpolation movement = iterator.next();
 				if (movement.isRenderingEnabled)
-					renderMovement(movement, new ArrayList<>(CMDCamClient.points));
+					renderMovement(event.getMatrixStack(), movement, new ArrayList<>(CMDCamClient.points));
 			}
 			
-			GL11.glDepthMask(true);
-			GlStateManager.enableTexture();
-			GlStateManager.enableBlend();
-			GlStateManager.clearCurrentColor();
+			RenderSystem.depthMask(true);
+			RenderSystem.enableTexture();
+			RenderSystem.enableBlend();
+			RenderSystem.clearCurrentColor();
 			
 		}
 	}
 	
-	public static void renderBlock(double x, double y, double z, double width, double height, double length, double rotateX, double rotateY, double rotateZ, double red, double green, double blue, double alpha) {
-		GlStateManager.pushMatrix();
-		GlStateManager.translated(x, y, z);
-		GlStateManager.enableRescaleNormal();
-		GlStateManager.rotatef((float) rotateX, 1, 0, 0);
-		GlStateManager.rotatef((float) rotateY, 0, 1, 0);
-		GlStateManager.rotatef((float) rotateZ, 0, 0, 1);
-		GlStateManager.scaled(width, height, length);
-		GlStateManager.color4f((float) red, (float) green, (float) blue, (float) alpha);
-		
-		GL11.glBegin(GL11.GL_POLYGON);
-		GL11.glNormal3f(0.0f, 1.0f, 0.0f);
-		GL11.glVertex3f(-0.5f, 0.5f, 0.5f);
-		GL11.glVertex3f(-0.5f, 0.5f, 0.5f);
-		GL11.glVertex3f(0.5f, 0.5f, 0.5f);
-		GL11.glVertex3f(0.5f, 0.5f, -0.5f);
-		GL11.glVertex3f(-0.5f, 0.5f, -0.5f);
-		GL11.glEnd();
-		
-		GL11.glBegin(GL11.GL_POLYGON);
-		//GL11.glColor4d(red, green, blue, alpha);
-		GL11.glNormal3f(0.0f, 0.0f, 1.0f);
-		GL11.glVertex3f(0.5f, -0.5f, 0.5f);
-		GL11.glVertex3f(0.5f, 0.5f, 0.5f);
-		GL11.glVertex3f(-0.5f, 0.5f, 0.5f);
-		GL11.glVertex3f(-0.5f, -0.5f, 0.5f);
-		GL11.glEnd();
-		
-		GL11.glBegin(GL11.GL_POLYGON);
-		//GL11.glColor4d(red, green, blue, alpha);
-		GL11.glNormal3f(1.0f, 0.0f, 0.0f);
-		GL11.glVertex3f(0.5f, 0.5f, -0.5f);
-		GL11.glVertex3f(0.5f, 0.5f, 0.5f);
-		GL11.glVertex3f(0.5f, -0.5f, 0.5f);
-		GL11.glVertex3f(0.5f, -0.5f, -0.5f);
-		GL11.glEnd();
-		
-		GL11.glBegin(GL11.GL_POLYGON);
-		//GL11.glColor4d(red, green, blue, alpha);
-		GL11.glNormal3f(-1.0f, 0.0f, 0.0f);
-		GL11.glVertex3f(-0.5f, -0.5f, 0.5f);
-		GL11.glVertex3f(-0.5f, 0.5f, 0.5f);
-		GL11.glVertex3f(-0.5f, 0.5f, -0.5f);
-		GL11.glVertex3f(-0.5f, -0.5f, -0.5f);
-		GL11.glEnd();
-		
-		GL11.glBegin(GL11.GL_POLYGON);
-		//GL11.glColor4d(red, green, blue, alpha);
-		GL11.glNormal3f(0.0f, -1.0f, 0.0f);
-		GL11.glVertex3f(0.5f, -0.5f, 0.5f);
-		GL11.glVertex3f(-0.5f, -0.5f, 0.5f);
-		GL11.glVertex3f(-0.5f, -0.5f, -0.5f);
-		GL11.glVertex3f(0.5f, -0.5f, -0.5f);
-		GL11.glEnd();
-		
-		GL11.glBegin(GL11.GL_POLYGON);
-		//GL11.glColor4d(red, green, blue, alpha);
-		GL11.glNormal3f(0.0f, 0.0f, -1.0f);
-		GL11.glVertex3f(0.5f, 0.5f, -0.5f);
-		GL11.glVertex3f(0.5f, -0.5f, -0.5f);
-		GL11.glVertex3f(-0.5f, -0.5f, -0.5f);
-		GL11.glVertex3f(-0.5f, 0.5f, -0.5f);
-		GL11.glEnd();
-		
-		GlStateManager.popMatrix();
-	}
-	
-	public void renderMovement(CamInterpolation movement, ArrayList<CamPoint> points) {
+	public void renderMovement(MatrixStack mat, CamInterpolation movement, ArrayList<CamPoint> points) {
 		try {
 			movement.initMovement(points, 0, CMDCamClient.target);
 		} catch (PathParseException e) {
@@ -217,20 +160,32 @@ public class CamEventHandlerClient {
 		}
 		
 		double steps = 20 * (points.size() - 1);
+		ActiveRenderInfo activerenderinfo = TileEntityRendererDispatcher.instance.renderInfo;
+		Vec3d view = activerenderinfo.getProjectedView();
 		
-		GlStateManager.pushMatrix();
-		Vec3 color = movement.getColor();
-		GL11.glColor3d(color.x, color.y, color.z);
-		GlStateManager.translated(-TileEntityRendererDispatcher.staticPlayerX, -TileEntityRendererDispatcher.staticPlayerY + mc.player.getEyeHeight() - 0.1, -TileEntityRendererDispatcher.staticPlayerZ);
-		GlStateManager.lineWidth(1.0F);
-		GL11.glBegin(GL11.GL_LINE_STRIP);
+		RenderSystem.depthMask(true);
+		RenderSystem.disableCull();
+		RenderSystem.enableBlend();
+		RenderSystem.defaultBlendFunc();
+		RenderSystem.disableTexture();
+		
+		Tessellator tessellator = Tessellator.getInstance();
+		BufferBuilder bufferbuilder = tessellator.getBuffer();
+		
+		mat.push();
+		RenderSystem.lineWidth(1.0F);
+		mat.translate(-view.x, -view.y, -view.z);
+		Vector3 color = movement.getColor();
+		bufferbuilder.begin(3, DefaultVertexFormats.POSITION_COLOR);
+		
 		for (int i = 0; i < steps; i++) {
 			CamPoint pos = CamMode.getPoint(movement, points, i / steps, 0, 0);
-			GL11.glVertex3d(pos.x, pos.y, pos.z);
+			bufferbuilder.pos(mat.getLast().getMatrix(), (float) pos.x, (float) pos.y, (float) pos.z).color((float) color.x, (float) color.y, (float) color.z, 1).endVertex();
 		}
-		GL11.glVertex3d(points.get(points.size() - 1).x, points.get(points.size() - 1).y, points.get(points.size() - 1).z);
-		GL11.glEnd();
-		GlStateManager.popMatrix();
+		bufferbuilder.pos(mat.getLast().getMatrix(), (float) points.get(points.size() - 1).x, (float) points.get(points.size() - 1).y, (float) points.get(points.size() - 1).z).color((float) color.x, (float) color.y, (float) color.z, 1).endVertex();
+		
+		tessellator.draw();
+		mat.pop();
 	}
 	
 	@SubscribeEvent
@@ -240,8 +195,10 @@ public class CamEventHandlerClient {
 	
 	public static long lastRenderTime;
 	
-	public static boolean shouldPlayerTakeInput() {
-		return true;
+	public static boolean isCurrentViewEntity() {
+		if (CMDCamClient.getCurrentPath() != null)
+			return true;
+		return mc.getRenderViewEntity() == mc.player;
 	}
 	
 	public static boolean selectEntityMode = false;
@@ -270,14 +227,13 @@ public class CamEventHandlerClient {
 		if (CMDCamClient.getCurrentPath() != null && CMDCamClient.getCurrentPath().cachedMode instanceof OutsideMode) {
 			camera = mc.renderViewEntity;
 			mc.renderViewEntity = mc.player;
-			//mc.setRenderViewEntity(mc.player);
 		}
 	}
 	
 	public static void setupMouseHandlerAfter() {
 		if (CMDCamClient.getCurrentPath() != null && CMDCamClient.getCurrentPath().cachedMode instanceof OutsideMode) {
 			mc.renderViewEntity = camera;
-			//mc.setRenderViewEntity(camera);
+			camera = null;
 		}
 	}
 }
